Fix layout on mobile

--- a/themes/nidevconf/static/css/theme-NIDevConf.css
+++ b/themes/nidevconf/static/css/theme-NIDevConf.css
@@ -3235,7 +3235,7 @@ body .colors .col-xs-2:nth-child(6n+0) {
   }
 
   .hero-slider .slides li {
-    height: 750px;
+    height: 1000px;
   }
 
   /*-- color section --*/
